# ictk

./: .gitignore  .pydocstyle  README.md  conftest.py  contributing.md  examples.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
examples/: igc.md
ictk/: __init__.py  igc.py  main.py
ictk/scripts/: utils.py
src/ictk/: bin.py  cli.py  igc.py
tests/: bin_test_file.csv  igc_test_file.txt  test_bin.py  test_igc.py  test_rmh.py
