[tool.poetry]
name = "ictk"
version = "0.1.0"
description = "A collection of useful tools for Icelandic corpora"
authors = ["Haukur <haukurpalljonsson@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cadia-lvl/ictk"
packages = [
    {include = "ictk", from = "src"}
]
[tool.poetry.scripts]
pos = "ictk.cli:cli"
[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
